[STD-161] Migrating serialization to Json